tests/fixtures/invalid/pow_bool_float_set.py
# Cannot call pow() with Bool, Float, Set[int]
x = pow(True, 1.0, {1, 2, 3})
